--- a/style.css
+++ b/style.css
@@ -99,3 +99,18 @@ a {
   outline: none;
   padding: 8px 20px;
 }
+
+.to-github {
+  background: var(--blue);
+  border-radius: 50%;
+  color: var(--bg);
+  display: inline-block;
+  font-size: .8em;
+  height: 1em;
+  line-height: 1;
+  padding: 2px;
+  text-align: center;
+  text-decoration: none;
+  width: 1em;
+}
+
